* Add nodeType constants DOCUMENT_FRAGMENT_NODE, DOCUMENT_NODE, and ELEMENT_NODE. [jddalton, kangax]

* Change all `foo.indexOf(blah) === -1` to `foo.indexOf(blah) < 0`. [Andrea Giammarchi, jddalton]

* Rename Fuse.Dom.Element.decorate to Fuse.Dom.Element.fromElement to be consistent with the rest of the API. [jddalton]

* Add Fuse.Dom.Document class and support for Fuse.get(document). [jddalton]

* Move Fuse.String#scan to template.js so it is with other `gsub` centric methods. [jddalton]

* Futher optimize Fuse.String#times by using recursion. [Dr. J.R. Stockton, jddalton, kangax, Yaffle]

* Allow Fuse.String#extractScripts() to accept a callback argument which reduces one iteration in Fuse.String#evalScripts. [jddalton]

* Cleanup string.js and lazy define Fuse.String#escapeHTML and Fuse.String#unescapeHTML. [jddalton]

* Move all DOM functionality to the src/dom directory. [jddalton]

* Optimize Fuse.String#lastIndexOf by removing the use of the arguments object and make Fuse.Array#indexOf and Fuse.Array#lastIndexOf use toInteger(). [jddalton]

* Optimize Fuse.String#times by using the `Exponentiation by squaring` algorithm. [Yaffle]

* Add support for Fuse.get('<div>') and Fuse.Dom.Element('<div>') to return a new decorated element. [jddalton]

* Make Fuse(element) point to Fuse.get(element) when DOM modules are included. [jddalton]

* Make Fuse.Range#max and Fuse.Range#min only require Fuse.Enumerable equivalents when passing a callback. [jddalton]

* Add private `Enumerable` variable to shorten the Fuse.Enumerable lookup. [jddalton]

* Add private `nil` variable to shorten some null assignments. [jddalton, Kyle Simpson]

* Optimize Fuse.Dom.Element methods `insert`, `update`, and `replace` by only evaling scripts or creating nodes when needed. [jddalton]

* Overhaul how Fuse.Dom.Element methods read and write SCRIPT element text. [jddalton]

* Add Fuse.Dom.Node#getFuseId so it can be inherited by all other element/node classes. [jddalton]
